bugfix: Fix wrapping of multi-line messages on top of page.
Because .message was an inline element, it wrapped very strangely in long
sentences. This fix makes it display as a block and the text now wraps nicely.

--- a/transifex/site_media/css/base.css
+++ b/transifex/site_media/css/base.css
@@ -536,6 +536,12 @@ img.repotype { vertical-align: middle; margin-left: 10px; }
   font-size: 0.9em;
 }
 
+.messages .message {
+  width: 70%;
+  margin: 0 auto;
+  display: block;
+}
+
 .message.i16 {
   background-position: 10px 50%;
   padding-left: 33px;
